# bloom2

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENCE  README.md
.github/: dependabot.yml
.github/workflows/: build.yml  lint.yml  release.yml  rust.yml  test.yml
benches/: bench.rs
src/: bloom.rs  compressed_bitmap.rs  filter_size.rs  lib.rs
src/bitmap/: bytes.rs  compressed_bitmap.rs  mod.rs  vec.rs
tests/: serialisation.rs
tests/fixtures/: compressed_bitmap.json
