[package]
name = "bloom2"
version = "0.4.2"
authors = ["Dom Dwyer <dom@itsallbroken.com>"]
edition = "2018"

license = "BSD-3-Clause"
description = "Fast, compressed, 2-level bloom filter and bitmap"
readme = "README.md"
documentation = "https://docs.rs/bloom2"
repository = "https://github.com/domodwyer/bloom2"
keywords = ["bloom", "filter", "probabilistic", "set", "bitmap"]
categories = ["caching", "compression", "data-structures"]

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }

[features]
serde = ["dep:serde"]

[dev-dependencies]
criterion = "0.5"
quickcheck = "1.0"
quickcheck_macros = "1.0"
serde_json = "1.0"
twox-hash = "1"

[[bench]]
name = "bench"
harness = false

[lib]
bench = false

[package.metadata.docs.rs]
all-features = true
