[package]
name = "bloom2"
version = "0.5.1"
authors = ["Dom Dwyer <dom@itsallbroken.com>"]
edition = "2018"

license = "BSD-3-Clause"
description = "Fast, compressed, 2-level bloom filter and bitmap"
readme = "README.md"
documentation = "https://docs.rs/bloom2"
repository = "https://github.com/domodwyer/bloom2"
keywords = ["bloom", "filter", "probabilistic", "set", "bitmap"]
categories = ["caching", "compression", "data-structures"]
exclude = [".github"]

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }
bytes = { version = "1.9.0", optional = true, features = ["serde"] }

[features]
serde = ["dep:serde", "bytes/serde"]
bytes = ["dep:bytes"]

[dev-dependencies]
bincode = "1.3"
criterion = "0.7"
paste = "1.0.15"
proptest = { version = "1.5.0" }
quickcheck = "1.0"
quickcheck_macros = "1.0"
serde_json = "1.0"
twox-hash = "2"

[[bench]]
name = "bench"
harness = false

[lib]
bench = false

[package.metadata.docs.rs]
all-features = true
